[package]
name = "factory"
version = "0.1.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "`Factory` trait and its implementations"
homepage = "https://github.com/sile/factory"
repository = "https://github.com/sile/factory"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/factory"}
codecov = {repository = "sile/factory"}

[dependencies]
atomic_immut = { version = "0.1", optional = true }

[features]
swappable = ["atomic_immut"]

[package.metadata.docs.rs]
all-features = true
